@@ -3,12 +3,14 @@
          racket/serialize
          racket/pretty
          racket/contract/base
-         racket/contract/combinator)
+         racket/contract/combinator
+         (only-in "private/for.rkt" prop:stream))
 
 (provide set seteq seteqv
          set? set-eq? set-eqv? set-equal?
          set-empty? set-count
          set-member? set-add set-remove
+         set-first set-rest
          set-union set-intersect set-subtract set-symmetric-difference
          subset? proper-subset?
          set-map set-for-each 
@@ -84,7 +86,10 @@
                                 (=? (set-ht set1) (set-ht set2)))
                               (lambda (set hc) (add1 (hc (set-ht set))))
                               (lambda (set hc) (add1 (hc (set-ht set)))))
-  #:property prop:sequence (lambda (v) (*in-set v)))
+  #:property prop:sequence (lambda (v) (*in-set v))
+  #:property prop:stream (vector (lambda (s) (set-empty? s))
+                                 (lambda (s) (set-first s))
+                                 (lambda (s) (set-rest s))))
 
 ;; Not currently exporting this because I'm not sure whether this is the right semantics
 ;; for it yet, but it follows most closely the semantics of the old set/c implementation
@@ -264,6 +269,20 @@
 
 (define (proper-subset? one two)
   (subset* 'proper-subset? one two #t))
+
+(define (set-first set)
+  (unless (set? set) (raise-argument-error 'set-first "set?" set))
+  (define ht (set-ht set))
+  (if (zero? (hash-count ht))
+      (raise-arguments-error 'set-first "given set is empty")
+      (hash-iterate-key ht (hash-iterate-first ht))))
+
+(define (set-rest set)
+  (unless (set? set) (raise-argument-error 'set-rest "set?" set))
+  (define ht (set-ht set))
+  (if (zero? (hash-count ht))
+      (raise-arguments-error 'set-rest "given set is empty")
+      (make-set (hash-remove ht (hash-iterate-key ht (hash-iterate-first ht))))))
 
 (define (set-map set proc)
   (unless (set? set) (raise-argument-error 'set-map "set?" 0 set proc))
