@@ -635,7 +635,7 @@ in the sequence.
 @; ======================================================================
 @section[#:tag "streams"]{Streams}
 
-A @deftech{stream} is a kind of sequence that supports functional
+A @deftech{stream} is a kind of @tech{sequence} that supports functional
 iteration via @racket[stream-first] and @racket[stream-rest]. The
 @racket[stream-cons] form constructs a lazy stream, but plain lists
 can be used as stream, and functions such as @racket[in-range] and
